--- a/Chauffeur/src/main/resources/application.properties
+++ b/Chauffeur/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port=8085
 spring.application.name=Chauffeur
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/chauffeur
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
