--- a/Chauffeur/src/main/resources/application.properties
+++ b/Chauffeur/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/chauffeur
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+eureka:
+    client:
+        serviceUrl:
+            defaultZone: http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
