--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -5,7 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 eureka:
+    instance:
+        hostname: localhost
     client:
-        serviceUrl:
-            defaultZone: http://localhost:8761/eureka/
+        service-url:
+            defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 eureka.instance.prefer-ip-address=true
