--- a/Chauffeur/pom.xml
+++ b/Chauffeur/pom.xml
@@ -29,11 +29,13 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
-		</dependency>
+            <version>3.0.0</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
+            <version>4.0.0</version>
+        </dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
