--- a/Admin/Dockerfile
+++ b/Admin/Dockerfile
@@ -1,4 +1,4 @@
  FROM openjdk:17
  EXPOSE 8087
- ADD target/Admin_jar/Admin.jar Admin.jar
+ ADD target/Admin.jar Admin.jar
  ENTRYPOINT ["java","-jar","Admin.jar"]
