--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -18,7 +18,7 @@ resilience4j.circuitbreaker.configs.shared.slow-call-duration-threshold=2s
 resilience4j.circuitbreaker.configs.shared.writable-stack-trace-enabled=true
 resilience4j.circuitbreaker.configs.shared.automatic-transition-from-open-to-half-open-enabled=true
 resilience4j.circuitbreaker.instances.example.base-config=shared
-#spring.jpa.show-sql: true
+spring.jpa.show-sql: true
 spring:
     jpa:
         hibernate.ddl-auto: update
@@ -26,7 +26,7 @@ spring:
         show-sql: true
 eureka:
     instance:
-        hostname: localhost
+        hostname: eurekaserver
     client:
         registerWithEureka: false
         fetchRegistry: false
