--- a/Chauffeur/docker-compose.yml
+++ b/Chauffeur/docker-compose.yml
@@ -3,33 +3,29 @@ services:
   mysql:
     image: mysql:latest
     environment:
-      MYSQL_DATABASE: admin
+      MYSQL_DATABASE: chauffeur
       MYSQL_ALLOW_EMPTY_PASSWORD=: true
     ports:
       - "3306"
-  admin:
+  chauffeur:
     build: .
     depends_on:
       - mysql
-      - eurekaserver
+      - eureka
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/admin
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/chauffeur
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD:
-#      EUREKA_SERVICE_URL: http://eurekaserver:8761
+      EUREKA_SERVICE_URL: http://eureka:8761
       EUREKA_INSTANCE_PREFER_IP_ADDRESS: true
       LOGGING_FILE: /tmp/admin.log
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8761/eureka
     ports:
       - "8087:8087"
 
-  eurekaserver:
+  eureka:
     image: springcloud/eureka
+    container_name: eureka
     ports:
       - "8761:8761"
-    build:
-      context: ./discoveryserver
-      dockerfile: Dockerfile
     environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://eurekaserver:8761/eureka/"
-      EUREKASERVER_PORT: "8761"
+      EUREKA_INSTANCE_PREFERIPADDRESS: true
