--- a/Chauffeur/Dockerfile
+++ b/Chauffeur/Dockerfile
@@ -1,4 +1,5 @@
- FROM openjdk:17
- EXPOSE 8085
- ADD target/Chauffeur.jar Chauffeur.jar
- ENTRYPOINT ["java","-jar","Chauffeur.jar"]
+FROM openjdk:17
+LABEL maintainer="Chauffeur"
+EXPOSE 8085
+ADD /target/Chauffeur.jar Chauffeur.jar
+ENTRYPOINT ["java","-jar","Chauffeur.jar"]
