--- a/Locataire/src/main/resources/application.properties
+++ b/Locataire/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8089
 spring.application.name=Locataire
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/locataire
+spring.datasource.url=jdbc:mysql://mysqldb:3306/locataire
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -27,7 +27,7 @@ client:
 registerWithEureka: false
 fetchRegistry: false
 serviceUrl:
-defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+defaultZone: http://eureka:8761/eureka/
 
 
 management.endpoint.web.exposure.include = *
