--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=8087
 spring.application.name=Admin
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/admin
+#spring.datasource.username = root
+spring.datasource.url=jdbc:mysql://mysqldb/admin
 spring.datasource.username=root
-spring.datasource.password=
+spring.sql.init.mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 management.endpoint.circuitbreakers.enabled=true
 resilience4j.circuitbreaker.configs.shared.register-health-indicator=true
@@ -26,12 +27,12 @@ spring:
         show-sql: true
 eureka:
     instance:
-        hostname: eurekaserver
+        hostname: eureka
     client:
         registerWithEureka: false
         fetchRegistry: false
         serviceUrl:
-            defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+            defaultZone: http://eureka:8761/eureka/
 
 
 management.endpoint.web.exposure.include = *
