--- a/Chauffeur/pom.xml
+++ b/Chauffeur/pom.xml
@@ -95,7 +95,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
 		</plugins>
+		<finalName>Chauffeur</finalName>
 	</build>
 	<repositories>
 		<repository>
