--- a/Chauffeur/src/main/resources/application.properties
+++ b/Chauffeur/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 server.port=8085
 spring.application.name=Chauffeur
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/chauffeur
+spring.datasource.url=jdbc:mysql://mysqldb:3306/chauffeur
 spring.datasource.username=root
-spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 management.endpoint.circuitbreakers.enabled=true
 resilience4j.circuitbreaker.configs.shared.register-health-indicator=true
@@ -27,7 +26,7 @@ eureka:
         registerWithEureka: false
         fetchRegistry: false
         serviceUrl:
-            defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+            defaultZone: http://eureka:8761/eureka/
 
 
 management.endpoint.web.exposure.include = *
