--- a/Eureka_server/Dockerfile
+++ b/Eureka_server/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17
 EXPOSE 8761
-ADD /target/Eureka_server.jar Eureka_server.jar
-ENTRYPOINT ["java","-jar","Eureka_server.jar"]
+ADD /target/EurekaServer.jar EurekaServer.jar
+ENTRYPOINT ["java","-jar","EurekaServer.jar"]
