--- a/Voiture/src/main/resources/application.properties
+++ b/Voiture/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-server.port=8086
+
+server.port=8083
 spring.application.name=Vehicule
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/vehicule
+spring.datasource.url=jdbc:mysql://mysqldb:3306/vehicule
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -21,13 +22,13 @@ resilience4j.circuitbreaker.instances.example.base-config=shared
 #spring.jpa.show-sql: true
 
 eureka:
-instance:
-hostname: localhost
-client:
-registerWithEureka: false
-fetchRegistry: false
-serviceUrl:
-defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    instance:
+        hostname: eureka
+    client:
+        registerWithEureka: false
+        fetchRegistry: false
+    serviceUrl:
+        defaultZone: http://eureka:8761/eureka/
 
 
 management.endpoint.web.exposure.include = *
