--- a/Mission/Dockerfile
+++ b/Mission/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17
-LABEL maintainer="Admin"
-EXPOSE 8087
-ADD /target/Admin.jar Admin.jar
-ENTRYPOINT ["java","-jar","Admin.jar"]
+LABEL maintainer="Mission"
+EXPOSE 8088
+ADD /target/Mission.jar Mission.jar
+ENTRYPOINT ["java","-jar","Mission.jar"]
