--- a/Mission/src/main/resources/application.properties
+++ b/Mission/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8088
 spring.application.name=Mission
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mission
+spring.datasource.url=jdbc:mysql:mysqldb:3306/mission
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -21,13 +21,13 @@ resilience4j.circuitbreaker.instances.example.base-config=shared
 spring.jpa.show-sql: true
 
 eureka:
-instance:
-hostname: localhost
-client:
-registerWithEureka: false
-fetchRegistry: false
-serviceUrl:
-defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    instance:
+        hostname: localhost
+    client:
+        registerWithEureka: false
+        fetchRegistry: false
+    serviceUrl:
+        defaultZone: http://eureka:8761/eureka/
 
 management.endpoint.web.exposure.include = *
 management.endpoint.health.show-details= always
@@ -43,3 +43,7 @@ management.security.enabled=false
 #management.endpoints.web.base-path=/gestion
 management.endpoints.enabled-by-default=false
 management.endpoint.info.enabled=true
+
+
+spring.cloud.vault.host=localhost
+spring.cloud.vault.port=8088
