--- a/Voiture/src/main/resources/application.properties
+++ b/Voiture/src/main/resources/application.properties
@@ -24,11 +24,12 @@ resilience4j.circuitbreaker.instances.example.base-config=shared
 eureka:
     instance:
         hostname: eureka
-    client:
-        registerWithEureka: false
-        fetchRegistry: false
+#        preferIpAddress: true
     serviceUrl:
         defaultZone: http://eureka:8761/eureka/
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 
 management.endpoint.web.exposure.include = *
