--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -28,12 +28,11 @@ spring:
 eureka:
     instance:
         hostname: eureka
-    client:
-        registerWithEureka: false
-        fetchRegistry: false
-        serviceUrl:
-            defaultZone: http://eureka:8761/eureka/
+    serviceUrl:
+        defaultZone: http://eureka:8761/eureka/
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 management.endpoint.web.exposure.include = *
 management.endpoint.health.show-details= always
