--- a/Chauffeur/src/main/resources/application.properties
+++ b/Chauffeur/src/main/resources/application.properties
@@ -22,12 +22,11 @@ resilience4j.circuitbreaker.instances.example.base-config=shared
 eureka:
     instance:
         hostname: localhost
-    client:
-        registerWithEureka: false
-        fetchRegistry: false
-        serviceUrl:
-            defaultZone: http://eureka:8761/eureka/
+    serviceUrl:
+        defaultZone: http://eureka:8761/eureka/
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 management.endpoint.web.exposure.include = *
 management.endpoint.health.show-details= always
