--- a/Locataire/src/main/resources/application.properties
+++ b/Locataire/src/main/resources/application.properties
@@ -21,14 +21,13 @@ resilience4j.circuitbreaker.instances.example.base-config=shared
 #spring.jpa.show-sql: true
 
 eureka:
-instance:
-hostname: localhost
-client:
-registerWithEureka: false
-fetchRegistry: false
-serviceUrl:
-defaultZone: http://eureka:8761/eureka/
+    instance:
+        hostname: eureka
+    serviceUrl:
+        defaultZone: http://eureka:8761/eureka/
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 management.endpoint.web.exposure.include = *
 management.endpoint.health.show-details= always
