--- a/Mission/src/main/resources/application.properties
+++ b/Mission/src/main/resources/application.properties
@@ -23,11 +23,11 @@ spring.jpa.show-sql: true
 eureka:
     instance:
         hostname: localhost
-    client:
-        registerWithEureka: false
-        fetchRegistry: false
     serviceUrl:
         defaultZone: http://eureka:8761/eureka/
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 management.endpoint.web.exposure.include = *
 management.endpoint.health.show-details= always
