--- a/Recherche_microservices/src/main/resources/application.properties
+++ b/Recherche_microservices/src/main/resources/application.properties
@@ -17,12 +17,11 @@ resilience4j.circuitbreaker.instances.example.base-config=shared
 eureka:
     instance:
         hostname: localhost
-    client:
-        registerWithEureka: false
-        fetchRegistry: false
     serviceUrl:
         defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 management.endpoint.web.exposure.include = *
 management.endpoint.health.show-details= always
